@@ -5,6 +5,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import uk.gov.hmcts.ccd.definition.store.elastic.exception.ElasticSearchInitialisationException;
 import uk.gov.hmcts.ccd.definition.store.event.DefinitionImportedEvent;
 import uk.gov.hmcts.ccd.definition.store.repository.entity.CaseFieldEntity;
 import uk.gov.hmcts.ccd.definition.store.repository.entity.CaseTypeEntity;
@@ -18,11 +19,13 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.not;
+import static org.junit.Assert.assertThrows;
 import static org.testcontainers.shaded.org.awaitility.Awaitility.await;
 import static uk.gov.hmcts.ccd.definition.store.elastic.hamcresutil.IsEqualJSON.equalToJSONInFile;
 import static uk.gov.hmcts.ccd.definition.store.utils.CaseFieldBuilder.newField;
@@ -137,7 +140,7 @@ class SynchronousElasticDefinitionImportListenerIT extends ElasticsearchBaseTest
     }
 
     @Test
-    void shouldReindex() throws JSONException {
+    void shouldReindexSuccessfully() throws JSONException {
         CaseFieldEntity baseTypeField1 = newTextField("TextField1").build();
 
         CaseTypeEntity caseTypeEntity1 = caseTypeBuilder
@@ -146,15 +149,43 @@ class SynchronousElasticDefinitionImportListenerIT extends ElasticsearchBaseTest
             .addField(baseTypeField1)
             .build();
 
-        DefinitionImportedEvent event = new DefinitionImportedEvent(Collections.singletonList(caseTypeEntity1),
-            true, true);
+        //create index and mapping for casetypea_cases-000001
+        definitionImportListener.onDefinitionImported(
+            new DefinitionImportedEvent(List.of(caseTypeEntity1))
+        );
 
+        //reindex to casetypea_cases-000002
+        DefinitionImportedEvent event = new DefinitionImportedEvent(
+            List.of(caseTypeEntity1), true, true
+        );
         definitionImportListener.onDefinitionImported(event);
+
 
         await().atMost(5, SECONDS).untilAsserted(() -> {
             String response = getElasticsearchIndices(CASE_TYPE_A);
             assertThat(response, containsString("casetypea_cases-000002"));
             assertThat(response, not(containsString("casetypea_cases-000001")));
+        });
+    }
+
+    @Test
+    void shouldThrowElasticSearchInitialisationException() throws JSONException {
+        CaseFieldEntity baseTypeField1 = newTextField("TextField1").build();
+
+        CaseTypeEntity caseTypeEntity1 = caseTypeBuilder
+            .withJurisdiction("JUR")
+            .withReference(CASE_TYPE_A)
+            .addField(baseTypeField1)
+            .build();
+
+        //will fail to generate mapping
+        baseTypeField1.getFieldType().setReference("InvalidElasticType");
+
+        DefinitionImportedEvent event = new DefinitionImportedEvent(Collections.singletonList(caseTypeEntity1),
+            true, true);
+
+        assertThrows(ElasticSearchInitialisationException.class, () -> {
+            definitionImportListener.onDefinitionImported(event);
         });
     }
 
